MiniJavaCompiler/Parser.output
Grammar

    0 $accept: Program $end

    1 Program: MainClassDeclaration ClassDeclarationList

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    3 ClassDeclarationList: /* empty */
    4                     | ClassDeclaration ClassDeclarationList

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    7 VariableDeclarationList: /* empty */
    8                        | VariableDeclarationList VariableDeclaration

    9 VariableDeclaration: Type IDENTIFIER ';'

   10 MethodDeclarationList: /* empty */
   11                      | MethodDeclaration MethodDeclarationList

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

   13 FormalList: /* empty */
   14           | Type IDENTIFIER FormalRestList

   15 FormalRestList: /* empty */
   16               | FormalRest FormalRestList

   17 FormalRest: ',' Type IDENTIFIER

   18 Type: INT_KEYWORD '[' ']'
   19     | BOOLEAN_KEYWORD
   20     | INT_KEYWORD
   21     | IDENTIFIER

   22 StatementList: /* empty */
   23              | Statement StatementList

   24 Statement: '{' StatementList '}'
   25          | IF_KEYWORD '(' Expression ')' Statement ELSE_KEYWORD Statement
   26          | WHILE_KEYWORD '(' Expression ')' Statement
   27          | SYSTEM_KEYWORD '.' OUT_KEYWORD '.' PRINTLN_KEYWORD '(' Expression ')' ';'
   28          | IDENTIFIER '=' Expression ';'
   29          | IDENTIFIER '[' Expression ']' '=' Expression ';'

   30 Expression: Expression BINARY_AND Expression
   31           | Expression '<' Expression
   32           | Expression '+' Expression
   33           | Expression '-' Expression
   34           | Expression '*' Expression
   35           | Expression '.' LENGTH_KEYWORD
   36           | Expression '.' IDENTIFIER '(' ExpressionList ')'
   37           | INTEGER_NUMBER
   38           | TRUE_KEYWORD
   39           | FALSE_KEYWORD
   40           | IDENTIFIER
   41           | THIS_KEYWORD
   42           | NEW_KEYWORD INT_KEYWORD '[' Expression ']'
   43           | NEW_KEYWORD IDENTIFIER '(' ')'
   44           | '!' Expression
   45           | '(' Expression ')'

   46 ExpressionList: /* empty */
   47               | Expression ExpressionRestList

   48 ExpressionRestList: /* empty */
   49                   | ExpressionRest ExpressionRestList

   50 ExpressionRest: ',' Expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 44
'(' (40) 2 12 25 26 27 36 43 45
')' (41) 2 12 25 26 27 36 43 45
'*' (42) 34
'+' (43) 32
',' (44) 17 50
'-' (45) 33
'.' (46) 27 35 36
';' (59) 9 12 27 28 29
'<' (60) 31
'=' (61) 28 29
'[' (91) 2 18 29 42
']' (93) 2 18 29 42
'{' (123) 2 5 6 12 24
'}' (125) 2 5 6 12 24
error (256)
INTEGER_NUMBER (258) 37
TRUE_KEYWORD (259) 38
FALSE_KEYWORD (260) 39
IDENTIFIER (261) 2 5 6 9 12 14 17 21 28 29 36 40 43
CLASS_KEYWORD (262) 2 5 6
PUBLIC_KEYWORD (263) 2 12
STATIC_KEYWORD (264) 2
VOID_KEYWORD (265) 2
EXTENDS_KEYWORD (266) 6
RETURN_KEYWORD (267) 12
INT_KEYWORD (268) 18 20 42
BOOLEAN_KEYWORD (269) 19
STRING_KEYWORD (270) 2
IF_KEYWORD (271) 25
ELSE_KEYWORD (272) 25
WHILE_KEYWORD (273) 26
THIS_KEYWORD (274) 41
NEW_KEYWORD (275) 42 43
PRINTLN_KEYWORD (276) 27
LENGTH_KEYWORD (277) 35
MAIN_KEYWORD (278) 2
SYSTEM_KEYWORD (279) 27
OUT_KEYWORD (280) 27
BINARY_AND (281) 30


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
MainClassDeclaration (44)
    on left: 2, on right: 1
ClassDeclarationList (45)
    on left: 3 4, on right: 1 4
ClassDeclaration (46)
    on left: 5 6, on right: 4
VariableDeclarationList (47)
    on left: 7 8, on right: 5 6 8 12
VariableDeclaration (48)
    on left: 9, on right: 8
MethodDeclarationList (49)
    on left: 10 11, on right: 5 6 11
MethodDeclaration (50)
    on left: 12, on right: 11
FormalList (51)
    on left: 13 14, on right: 12
FormalRestList (52)
    on left: 15 16, on right: 14 16
FormalRest (53)
    on left: 17, on right: 16
Type (54)
    on left: 18 19 20 21, on right: 9 12 14 17
StatementList (55)
    on left: 22 23, on right: 12 23 24
Statement (56)
    on left: 24 25 26 27 28 29, on right: 2 23 25 26
Expression (57)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right:
    12 25 26 27 28 29 30 31 32 33 34 35 36 42 44 45 47 50
ExpressionList (58)
    on left: 46 47, on right: 36
ExpressionRestList (59)
    on left: 48 49, on right: 47 49
ExpressionRest (60)
    on left: 50, on right: 49


State 0

    0 $accept: . Program $end

    CLASS_KEYWORD  shift, and go to state 1

    Program               go to state 2
    MainClassDeclaration  go to state 3


State 1

    2 MainClassDeclaration: CLASS_KEYWORD . IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClassDeclaration . ClassDeclarationList

    CLASS_KEYWORD  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclarationList)

    ClassDeclarationList  go to state 7
    ClassDeclaration      go to state 8


State 4

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER . '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    5 ClassDeclaration: CLASS_KEYWORD . IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS_KEYWORD . IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 10


State 7

    1 Program: MainClassDeclaration ClassDeclarationList .

    $default  reduce using rule 1 (Program)


State 8

    4 ClassDeclarationList: ClassDeclaration . ClassDeclarationList

    CLASS_KEYWORD  shift, and go to state 6

    $default  reduce using rule 3 (ClassDeclarationList)

    ClassDeclarationList  go to state 11
    ClassDeclaration      go to state 8


State 9

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' . PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    PUBLIC_KEYWORD  shift, and go to state 12


State 10

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER . '{' VariableDeclarationList MethodDeclarationList '}'
    6                 | CLASS_KEYWORD IDENTIFIER . EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    EXTENDS_KEYWORD  shift, and go to state 13
    '{'              shift, and go to state 14


State 11

    4 ClassDeclarationList: ClassDeclaration ClassDeclarationList .

    $default  reduce using rule 4 (ClassDeclarationList)


State 12

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD . STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    STATIC_KEYWORD  shift, and go to state 15


State 13

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD . IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}'

    IDENTIFIER  shift, and go to state 16


State 14

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' . VariableDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 17


State 15

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD . VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    VOID_KEYWORD  shift, and go to state 18


State 16

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER . '{' VariableDeclarationList MethodDeclarationList '}'

    '{'  shift, and go to state 19


State 17

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' VariableDeclarationList . MethodDeclarationList '}'
    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration

    IDENTIFIER       shift, and go to state 20
    PUBLIC_KEYWORD   shift, and go to state 21
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23

    $default  reduce using rule 10 (MethodDeclarationList)

    VariableDeclaration    go to state 24
    MethodDeclarationList  go to state 25
    MethodDeclaration      go to state 26
    Type                   go to state 27


State 18

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD . MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    MAIN_KEYWORD  shift, and go to state 28


State 19

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' . VariableDeclarationList MethodDeclarationList '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 29


State 20

   21 Type: IDENTIFIER .

    $default  reduce using rule 21 (Type)


State 21

   12 MethodDeclaration: PUBLIC_KEYWORD . Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    IDENTIFIER       shift, and go to state 20
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23

    Type  go to state 30


State 22

   18 Type: INT_KEYWORD . '[' ']'
   20     | INT_KEYWORD .

    '['  shift, and go to state 31

    $default  reduce using rule 20 (Type)


State 23

   19 Type: BOOLEAN_KEYWORD .

    $default  reduce using rule 19 (Type)


State 24

    8 VariableDeclarationList: VariableDeclarationList VariableDeclaration .

    $default  reduce using rule 8 (VariableDeclarationList)


State 25

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList . '}'

    '}'  shift, and go to state 32


State 26

   11 MethodDeclarationList: MethodDeclaration . MethodDeclarationList

    PUBLIC_KEYWORD  shift, and go to state 21

    $default  reduce using rule 10 (MethodDeclarationList)

    MethodDeclarationList  go to state 33
    MethodDeclaration      go to state 26


State 27

    9 VariableDeclaration: Type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 34


State 28

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD . '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '('  shift, and go to state 35


State 29

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList . MethodDeclarationList '}'
    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration

    IDENTIFIER       shift, and go to state 20
    PUBLIC_KEYWORD   shift, and go to state 21
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23

    $default  reduce using rule 10 (MethodDeclarationList)

    VariableDeclaration    go to state 24
    MethodDeclarationList  go to state 36
    MethodDeclaration      go to state 26
    Type                   go to state 27


State 30

   12 MethodDeclaration: PUBLIC_KEYWORD Type . IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    IDENTIFIER  shift, and go to state 37


State 31

   18 Type: INT_KEYWORD '[' . ']'

    ']'  shift, and go to state 38


State 32

    5 ClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 5 (ClassDeclaration)


State 33

   11 MethodDeclarationList: MethodDeclaration MethodDeclarationList .

    $default  reduce using rule 11 (MethodDeclarationList)


State 34

    9 VariableDeclaration: Type IDENTIFIER . ';'

    ';'  shift, and go to state 39


State 35

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' . STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    STRING_KEYWORD  shift, and go to state 40


State 36

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList . '}'

    '}'  shift, and go to state 41


State 37

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER . '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    '('  shift, and go to state 42


State 38

   18 Type: INT_KEYWORD '[' ']' .

    $default  reduce using rule 18 (Type)


State 39

    9 VariableDeclaration: Type IDENTIFIER ';' .

    $default  reduce using rule 9 (VariableDeclaration)


State 40

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD . '[' ']' IDENTIFIER ')' '{' Statement '}' '}'

    '['  shift, and go to state 43


State 41

    6 ClassDeclaration: CLASS_KEYWORD IDENTIFIER EXTENDS_KEYWORD IDENTIFIER '{' VariableDeclarationList MethodDeclarationList '}' .

    $default  reduce using rule 6 (ClassDeclaration)


State 42

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' . FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    IDENTIFIER       shift, and go to state 20
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23

    $default  reduce using rule 13 (FormalList)

    FormalList  go to state 44
    Type        go to state 45


State 43

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' . ']' IDENTIFIER ')' '{' Statement '}' '}'

    ']'  shift, and go to state 46


State 44

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList . ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    ')'  shift, and go to state 47


State 45

   14 FormalList: Type . IDENTIFIER FormalRestList

    IDENTIFIER  shift, and go to state 48


State 46

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' . IDENTIFIER ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 49


State 47

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' . '{' VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    '{'  shift, and go to state 50


State 48

   14 FormalList: Type IDENTIFIER . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 15 (FormalRestList)

    FormalRestList  go to state 52
    FormalRest      go to state 53


State 49

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 54


State 50

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' '{' . VariableDeclarationList StatementList RETURN_KEYWORD Expression ';' '}'

    $default  reduce using rule 7 (VariableDeclarationList)

    VariableDeclarationList  go to state 55


State 51

   17 FormalRest: ',' . Type IDENTIFIER

    IDENTIFIER       shift, and go to state 20
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23

    Type  go to state 56


State 52

   14 FormalList: Type IDENTIFIER FormalRestList .

    $default  reduce using rule 14 (FormalList)


State 53

   16 FormalRestList: FormalRest . FormalRestList

    ','  shift, and go to state 51

    $default  reduce using rule 15 (FormalRestList)

    FormalRestList  go to state 57
    FormalRest      go to state 53


State 54

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 58


State 55

    8 VariableDeclarationList: VariableDeclarationList . VariableDeclaration
   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList . StatementList RETURN_KEYWORD Expression ';' '}'

    IDENTIFIER       shift, and go to state 59
    INT_KEYWORD      shift, and go to state 22
    BOOLEAN_KEYWORD  shift, and go to state 23
    IF_KEYWORD       shift, and go to state 60
    WHILE_KEYWORD    shift, and go to state 61
    SYSTEM_KEYWORD   shift, and go to state 62
    '{'              shift, and go to state 63

    $default  reduce using rule 22 (StatementList)

    VariableDeclaration  go to state 24
    Type                 go to state 27
    StatementList        go to state 64
    Statement            go to state 65


State 56

   17 FormalRest: ',' Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 66


State 57

   16 FormalRestList: FormalRest FormalRestList .

    $default  reduce using rule 16 (FormalRestList)


State 58

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' . Statement '}' '}'

    IDENTIFIER      shift, and go to state 67
    IF_KEYWORD      shift, and go to state 60
    WHILE_KEYWORD   shift, and go to state 61
    SYSTEM_KEYWORD  shift, and go to state 62
    '{'             shift, and go to state 63

    Statement  go to state 68


State 59

   21 Type: IDENTIFIER .
   28 Statement: IDENTIFIER . '=' Expression ';'
   29          | IDENTIFIER . '[' Expression ']' '=' Expression ';'

    '='  shift, and go to state 69
    '['  shift, and go to state 70

    $default  reduce using rule 21 (Type)


State 60

   25 Statement: IF_KEYWORD . '(' Expression ')' Statement ELSE_KEYWORD Statement

    '('  shift, and go to state 71


State 61

   26 Statement: WHILE_KEYWORD . '(' Expression ')' Statement

    '('  shift, and go to state 72


State 62

   27 Statement: SYSTEM_KEYWORD . '.' OUT_KEYWORD '.' PRINTLN_KEYWORD '(' Expression ')' ';'

    '.'  shift, and go to state 73


State 63

   24 Statement: '{' . StatementList '}'

    IDENTIFIER      shift, and go to state 67
    IF_KEYWORD      shift, and go to state 60
    WHILE_KEYWORD   shift, and go to state 61
    SYSTEM_KEYWORD  shift, and go to state 62
    '{'             shift, and go to state 63

    $default  reduce using rule 22 (StatementList)

    StatementList  go to state 74
    Statement      go to state 65


State 64

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList . RETURN_KEYWORD Expression ';' '}'

    RETURN_KEYWORD  shift, and go to state 75


State 65

   23 StatementList: Statement . StatementList

    IDENTIFIER      shift, and go to state 67
    IF_KEYWORD      shift, and go to state 60
    WHILE_KEYWORD   shift, and go to state 61
    SYSTEM_KEYWORD  shift, and go to state 62
    '{'             shift, and go to state 63

    $default  reduce using rule 22 (StatementList)

    StatementList  go to state 76
    Statement      go to state 65


State 66

   17 FormalRest: ',' Type IDENTIFIER .

    $default  reduce using rule 17 (FormalRest)


State 67

   28 Statement: IDENTIFIER . '=' Expression ';'
   29          | IDENTIFIER . '[' Expression ']' '=' Expression ';'

    '='  shift, and go to state 69
    '['  shift, and go to state 70


State 68

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement . '}' '}'

    '}'  shift, and go to state 77


State 69

   28 Statement: IDENTIFIER '=' . Expression ';'

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 86


State 70

   29 Statement: IDENTIFIER '[' . Expression ']' '=' Expression ';'

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 87


State 71

   25 Statement: IF_KEYWORD '(' . Expression ')' Statement ELSE_KEYWORD Statement

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 88


State 72

   26 Statement: WHILE_KEYWORD '(' . Expression ')' Statement

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 89


State 73

   27 Statement: SYSTEM_KEYWORD '.' . OUT_KEYWORD '.' PRINTLN_KEYWORD '(' Expression ')' ';'

    OUT_KEYWORD  shift, and go to state 90


State 74

   24 Statement: '{' StatementList . '}'

    '}'  shift, and go to state 91


State 75

   12 MethodDeclaration: PUBLIC_KEYWORD Type IDENTIFIER '(' FormalList ')' '{' VariableDeclarationList StatementList RETURN_KEYWORD . Expression ';' '}'

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 92


State 76

   23 StatementList: Statement StatementList .

    $default  reduce using rule 23 (StatementList)


State 77

    2 MainClassDeclaration: CLASS_KEYWORD IDENTIFIER '{' PUBLIC_KEYWORD STATIC_KEYWORD VOID_KEYWORD MAIN_KEYWORD '(' STRING_KEYWORD '[' ']' IDENTIFIER ')' '{' Statement '}' . '}'

    '}'  shift, and go to state 93


State 78

   37 Expression: INTEGER_NUMBER .

    $default  reduce using rule 37 (Expression)


State 79

   38 Expression: TRUE_KEYWORD .

    $default  reduce using rule 38 (Expression)


State 80

   39 Expression: FALSE_KEYWORD .

    $default  reduce using rule 39 (Expression)


State 81

   40 Expression: IDENTIFIER .

    $default  reduce using rule 40 (Expression)


State 82

   41 Expression: THIS_KEYWORD .

    $default  reduce using rule 41 (Expression)


State 83

   42 Expression: NEW_KEYWORD . INT_KEYWORD '[' Expression ']'
   43           | NEW_KEYWORD . IDENTIFIER '(' ')'

    IDENTIFIER   shift, and go to state 94
    INT_KEYWORD  shift, and go to state 95


State 84

   44 Expression: '!' . Expression

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 96


State 85

   45 Expression: '(' . Expression ')'

    INTEGER_NUMBER  shift, and go to state 78
    TRUE_KEYWORD    shift, and go to state 79
    FALSE_KEYWORD   shift, and go to state 80
    IDENTIFIER      shift, and go to state 81
    THIS_KEYWORD    shift, and go to state 82
    NEW_KEYWORD     shift, and go to state 83
    '!'             shift, and go to state 84
    '('             shift, and go to state 85

    Expression  go to state 97


State 86

   28 Statement: IDENTIFIER '=' Expression . ';'
   30 Expression: Expression . BINARY_AND Expression
   31           | Expression . '<' Expression
   32           | Expression . '+' Expression
   33           | Expression . '-' Expression
   34           | Expression . '*' Expression
   35           | Expression . '.' LENGTH_KEYWORD
   36           | Expression . '.' IDENTIFIER '(' ExpressionList ')'

    ';'         shift, and go to state 98
    '.'         shift, and go to state 99
    BINARY_AND  shift, and go to state 100
    '<'         shift, and go to state 101
    '+'         shift, and go to state 102
    '-'         shift, and go to state 103
    '*'         shift, and go to state 104


State 87

   29 Statement: IDENTIFIER '[' Expression . ']' '=' Expression ';'
   30 Expression: Expression . BINARY_AND Expression
   31           | Expression . '<' Expression
   32           | Expression . '+' Expression
   33           | Expression . '-' Expression
   34           | Expression . '*' Expression
   35           | Expression . '.' LENGTH_KEYWORD
   36           | Expression . '.' IDENTIFIER '(' ExpressionList ')'

    '.'         shift, and go to state 99
    BINARY_AND  shift, and go to state 100
    '<'         shift, and go to state 101
    '+'         shift, and go to state 102
    '-'         shift, and go to state 103
    '*'         shift, and go to state 104
    ']'         shift, and go to state 105


State 88
